src/objects/Tag__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentTag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Or LP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ParentTag__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>